Added more stuff

--- a/src/app/battle/battle.html
+++ b/src/app/battle/battle.html
@@ -1,8 +1,10 @@
 <div class="container">
     <div>
         <div>
-            <h1>Player 1 Score:</h1>
-            {{ p1Result.getScore() }}
+            <h1>Player 1 Score: {{ p1Result.getScore() }}</h1>
+            <ul>
+                <li *ngFor="let sent of p1Result.sentences">{{ sent.text }}</li>
+            </ul>
         </div>
         <rtc-recorder #p1Recorder (blob)="receiveP1Blob($event)"></rtc-recorder>
     </div>
@@ -14,8 +16,10 @@
     </div>
     <div>
         <div>
-            <h1>Player 2 Score:</h1>
-            {{ p2Result.getScore() }}
+            <h1>Player 2 Score: {{ p2Result.getScore() }}</h1>
+            <ul>
+                <li *ngFor="let sent of p1Result.sentences">{{ sent.text }}</li>
+            </ul>
         </div>
         <rtc-recorder #p2Recorder (blob)="receiveP2Blob($event)"></rtc-recorder>
     </div>
