--- a/src/app/rtc/rtcrecorder.html
+++ b/src/app/rtc/rtcrecorder.html
@@ -5,9 +5,9 @@
 </div>
 <div class="row">
     <div class="col-xs-12">
-        <button md-raised-button color="primary" (click)="startRecording()"> Record </button>
-        <button md-raised-button color="primary"(click) ="stopRecording()"> Stop</button>
-        <button md-raised-button color="primary" (click)="download()"> Download</button>
+        <button mat-raised-button color="primary" (click)="startRecording()"> Record </button>
+        <button mat-raised-button color="primary" (click) ="stopRecording()"> Stop</button>
+        <button mat-raised-button color="primary" (click)="download()"> Download</button>
     </div>
 </div>
 
